<resources>
    <string name="app_name">Orchidrus</string>
    <string name="facebook_app_id">471510110042447</string>

    <string name="bloom_together">Bloom Together</string>
    <string name="orchidrus"><u>OrchidRUs</u></string>
    <string name="enter_email">Enter Email</string>
    <string name="password">Password</string>
    <string name="login_signup">LOGIN/SIGNUP</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="or_continue_with">Or Continue With</string>
    <string name="login">LOGIN</string>
    <string name="enter_otp_sent_to_your_email">Enter OTP sent to your Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="send_otp">SEND OTP</string>
    <string name="title_shop">Shop</string>
    <string name="title_gifts">Gifts</string>
    <string name="title_cart">Cart</string>
    <string name="title_profile">Profile</string>
    <string name="add">Add</string>
    <string name="home">Home</string>
    <string name="invite">Invite</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>

</resources>
