<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
            android:id="@+id/home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />

    <item
            android:id="@+id/invite_people"
            android:icon="@drawable/ic_connection"
            android:title="@string/invite" />

    <item
            android:id="@+id/navigation_plus"
            android:icon="@drawable/ic_add_social_media"
            android:title="" />

    <item
            android:id="@+id/profile"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/profile" />

    <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout" />
</menu>