<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:weightSum="2"
        android:padding="30dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <RelativeLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="0dp">

        <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_centerInParent="true"
                android:layout_height="wrap_content">

            <TextView
                    android:text="@string/forgot_password"
                    android:layout_marginTop="20dp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            <EditText
                    android:hint="@string/enter_email"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/border_line"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            <Button
                    android:text="@string/send_otp"
                    android:background="@color/pink"
                    android:textColor="@color/white"
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="0dp">


        <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_centerInParent="true"
                android:layout_height="wrap_content">

            <EditText
                    android:background="@drawable/border_line"
                    android:layout_marginTop="20dp"
                    android:hint="@string/enter_otp_sent_to_your_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            <RelativeLayout
                    android:layout_marginTop="20dp"
                    android:background="@drawable/border_line"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <EditText
                        android:hint="@string/enter_password"
                        android:layout_width="match_parent"
                        android:layout_toLeftOf="@id/passwordshow"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:layout_toStartOf="@id/passwordshow"/>

                <ImageView
                        android:id="@+id/passwordshow"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:background="@drawable/icon_visibility_on"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

            </RelativeLayout>

            <Button
                    android:text="@string/login"
                    android:background="@color/pink"
                    android:textColor="@color/white"
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>