<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:weightSum="2"
        android:padding="30dp"
        android:layout_height="match_parent">

    <RelativeLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:layout_marginTop="20dp"
                    android:text="Login With"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_marginBottom="30dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_weight="4"
                    android:layout_marginRight="30dp"
                    android:layout_marginLeft="30dp"
                    android:layout_height="0dp">

                <ImageView
                        android:src="@drawable/ic_facebook"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"/>
                <ImageView
                        android:src="@drawable/ic_google_plus"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"/>
                <ImageView
                        android:src="@drawable/ic_instagram"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"/>
                <ImageView
                        android:src="@drawable/ic_linkedin"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginLeft="30dp"
                    android:weightSum="4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <ImageView
                        android:src="@drawable/ic_twitter"
                        android:layout_weight="0.5"
                        android:layout_width="0dp"
                        android:visibility="invisible"
                        android:layout_height="wrap_content"/>

                <ImageView
                        android:src="@drawable/ic_twitter"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"/>
                <ImageView
                        android:src="@drawable/ic_slack"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"/>
                <ImageView
                        android:src="@drawable/ic_snapchat"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"/>
                <ImageView
                        android:src="@drawable/ic_linkedin"
                        android:layout_weight="0.5"
                        android:layout_width="0dp"
                        android:visibility="invisible"
                        android:layout_height="wrap_content"/>

            </LinearLayout>


            <TextView
                    android:layout_marginTop="20dp"
                    android:text="All your activity will remain private"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>


        </LinearLayout>

    </RelativeLayout>


    <RelativeLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="0dp">

        <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_centerInParent="true"
                android:layout_height="wrap_content">


            <TextView
                    android:text="@string/or_continue_with"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>


            <EditText
                    android:background="@drawable/border_line"
                    android:layout_marginTop="40dp"
                    android:hint="@string/enter_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            <RelativeLayout
                    android:layout_marginTop="10dp"
                    android:background="@drawable/border_line"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <EditText
                        android:hint="@string/password"
                        android:layout_width="match_parent"
                        android:layout_toLeftOf="@id/passwordshow"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:layout_toStartOf="@id/passwordshow"/>

                <ImageView
                        android:id="@+id/passwordshow"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:background="@drawable/icon_visibility_on"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                />

            </RelativeLayout>

            <Button
                    android:text="@string/login_signup"
                    android:background="@color/pink"
                    android:textColor="@color/white"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:id="@+id/forgot_password"
                    android:text="@string/forgot_password"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/blue"
                    android:layout_height="wrap_content"/>
        </LinearLayout>

    </RelativeLayout>

</LinearLayout>

